Updating simulation files

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,18 @@ simulations/oneExtinct/drawDatesExtinctMt
 simulations/popDiverg/drawDatesPop
 simulations/twoExtinct/drawDatesExtinct
 simulations/twoExtinct/drawDatesExtinctMt
+simulations/*Extinct/mtdates*
+simulations/*Extinct/dates*
+simulations/popDiverg/dates*
 Bayesian_sim/*_1
 Bayesian_sim/*_2
+rejection_sim/testPrior_4_tip_symmetric
+oneExtinct/10000/
+simulations/*Extinct/*0000/
+simulations/*Extinct/inference.ctl
+simulations/*Extinct/simulate.ctl
+simulations/popDiverg/*0/
+
+simulations/noDates/oneExtinct/
+simulations/noDates/popDiverge/
+simulations/noDates/twoExtinct/
