--- a/simulations/popDiverg/makefile
+++ b/simulations/popDiverg/makefile
@@ -3,6 +3,6 @@ CFLAGS=`pkg-config --cflags glib-2.0` -g -Wall -O3
 LDADD=`pkg-config --libs glib-2.0`
 
 drawDatesPop: drawDatesPop.c
-	$(CC) $(CFLAGS) drawDatesPop.c -lgsl -lgslcblas -lm -g -o drawDatesPop
+	$(CC) $(CFLAGS) drawDatesPop.c --static -lgsl -lgslcblas -lm -g -o drawDatesPop
 clean:
 	$(RM)  drawDatesPop
